@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add CGI::Tiny::escape_html convenience function
 
 0.015     2021-05-05 01:57:53 EDT
   - Add debugging commands for commandline convenience
